fixed problem with invisible graph

--- a/FrontEnd/src/app/capacity-graph/capacity-graph.component.css
+++ b/FrontEnd/src/app/capacity-graph/capacity-graph.component.css
@@ -17,8 +17,11 @@
 }
 
 .graph {
-  height:100%;
+  height: 96%;
+  display: flex;
+  padding: 0.3rem;
+  align-items: baseline;
+  overflow-x: auto;
   width:100%;
-  background-color: lightgray;
   z-index: 25;
 }
